syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.professor;

import "ClassesDefinitions.proto";

// Professor -> ClassServer Service

message OpenEnrollmentsRequest {
  int32 capacity = 1;
}

message OpenEnrollmentsResponse {
  ResponseCode code = 1;
  int32 versionNumber = 2;
}

message CloseEnrollmentsRequest {}

message CloseEnrollmentsResponse {
  ResponseCode code = 1;
  int32 versionNumber = 2;
}

message ListClassRequest {
  int32 versionNumber = 1;
}

message ListClassResponse {
  ResponseCode code = 1;
  ClassState classState = 2;
  int32 versionNumber = 3;
}

message CancelEnrollmentRequest {
  string studentId = 1;
  int32 versionNumber = 2;
}

message CancelEnrollmentResponse {
  ResponseCode code = 1;
  int32 versionNumber = 2;
}

service ProfessorService {
  rpc openEnrollments(OpenEnrollmentsRequest) returns (OpenEnrollmentsResponse);
  rpc closeEnrollments(CloseEnrollmentsRequest) returns (CloseEnrollmentsResponse);
  rpc listClass(ListClassRequest) returns (ListClassResponse);
  rpc cancelEnrollment(CancelEnrollmentRequest) returns (CancelEnrollmentResponse);
}
